force-app/main/default/objects/Video__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish_Date</label>
    <type>TextArea</type>
</CustomField>