force-app/main/default/objects/Video__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <label>Video_URL</label>
    <type>Url</type>
</CustomField>