force-app/main/default/objects/Video__c/fields/VideoYtbId__c.field-meta.xml
<CustomField>
    <fullName>VideoYtbId__c</fullName>
    <label>VideoYtbID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>